Added bin in package.json file

--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "gutil": "^1.5.5",
     "mocha": "^2.1.0",
     "run-sequence": "^1.0.2"
-  }
+  },
+  "bin": {
+    "swiss": "./bin/swiss"
+  },
 }
